--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.inputField {
+  @apply border-b-2 border-black transition-colors duration-500
+}
+
+.inputField:focus {
+  @apply outline-none border-sky-400
+}
+
+.btn-hover {
+  @apply bg-sky-400 font-bold text-base text-white px-3 py-1.5 cursor-pointer rounded-xl;
+}
+
+@media(hover: hover){
+  .btn-hover:hover {
+    @apply bg-sky-600;
+  }
+}
