--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@ textarea#content:focus {
   @apply border-2 border-sky-400 outline-none transition-colors duration-500
 }
 .btn-hover {
-  @apply bg-sky-400 font-bold md:text-base text-white px-3 py-1.5 cursor-pointer rounded-xl;
+  @apply bg-sky-400 font-bold md:text-base text-white px-2 md:px-3 py-1.5 cursor-pointer rounded-xl;
 }
 
 
