--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #171717;
     --foreground: #ededed;
   }
 }
@@ -25,36 +25,41 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .inputField {
-  @apply border-b-2 border-slate-300 transition-colors duration-500 p-2
+  @apply border-b-2 border-slate-300 transition-colors duration-500 p-2;
 }
 
 .inputField:focus {
-  @apply outline-none border-sky-400
+  @apply outline-none border-sky-400;
 }
 
 .username-display {
   @apply font-bold text-base px-3 py-1.5 cursor-pointer rounded-xl;
-
 }
 textarea#content {
-  @apply border-2 border-slate-300 transition-colors duration-500 rounded-xl p-2
+  @apply border-2 border-slate-300 transition-colors duration-500 rounded-xl p-2;
 }
 textarea#content:focus {
-  @apply border-2 border-sky-400 outline-none transition-colors duration-500
+  @apply border-2 border-sky-400 outline-none transition-colors duration-500;
 }
+
+.gradient {
+  @apply bg-[radial-gradient(circle_at_center,#00f5ff,#6a00ff)];
+}
+
 .btn-hover {
-  @apply bg-sky-400 font-bold md:text-base text-white px-2 md:px-3 py-1.5 cursor-pointer rounded-xl;
+  @apply bg-sky-400 dark:bg-slate-800 font-bold flex items-center justify-center text-white px-3 py-1.5 cursor-pointer rounded-xl;
 }
-
-
-@media(hover: hover){
+@media (hover: hover) {
   .btn-hover:hover {
     @apply bg-sky-600;
   }
 }
 
 .btn-hover:active {
-  @apply bg-sky-600
+  @apply bg-sky-600;
+}
+
+.box-shadow {
+  @apply shadow-lg dark:shadow-black;
 }
